--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                             </div>
                             <div>
                                 <ul>
-                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
+                                    <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
+                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
                                 </ul>
                             </div>  
                             <div>
@@ -106,8 +106,8 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
                                 </ul>
                             </div>
                         </div>  
@@ -125,9 +125,9 @@
                             </div>
                             <div>
                                 <ul>
-                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
+                                    <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
+                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
                                 </ul>
                             </div>  
                             <div>
@@ -137,8 +137,11 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
                                 </ul>
                             </div>
                         </div>  
@@ -156,9 +159,9 @@
                             </div>
                             <div>
                                 <ul>
-                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
-                                    <li><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                                    <li><i class="fa-solid fa-share-nodes"></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
+                                    <li><span><i class="fa-solid fa-folder"></span></i>  5 TB di spazio di archiviazione sicuro</li>
+                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
                                 </ul>
                             </div>  
                             <div>
@@ -168,8 +171,8 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
                                 </ul>
                             </div>
                         </div>  
@@ -297,10 +300,10 @@
                     </div>   
                 </div>
                 <!--seconda colonna  -->
-                <div class="column-partner">
+                <div class="column-partner scroll">
                     <div class="second-column">
                         <div>
-                            <img class="boh" src="img/designit.svg" alt="designit">
+                            <img class="logo" src="img/designit.svg" alt="designit">
                         </div>
                         <p>" I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna e' facile quanto Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna e' facile quanto Dropbox Paper""
                             <br>
@@ -430,9 +433,16 @@
                             </ul>
                         </div>
                     </div>
-                    <!--  -->
                 </div>
             </div>
+    </section>
+    <section>
+        <div class="big-container">
+            <div class="bottom-footer">
+                <p><a href="#"> <i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-angle-down"></i></a></p>
+            </div>
+
+        </div>
     </section>
     </footer>
     
