--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="big-container">
                 <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
                 <div class="flex img-header">    
-                    <div class="box-text">
+                    <div class="box-30">
                         <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <div>
                             <button>Inizia la tua prova gratuita</button>
@@ -60,7 +60,7 @@
                         <p>Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
-                    <div class="box-img">
+                    <div class="box-70">
                         <img src="img/jumbo.png" alt=" immagine proposta">
                     </div>
                 </div>
@@ -106,8 +106,8 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                    <li><span><i id="down-arrow"class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
                                 </ul>
                             </div>
                         </div>  
@@ -115,17 +115,17 @@
                     <!-- 2box main -->
                     <div class="vertical-main-box">
                         <div  class="price">
-                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                            <h5><i class="fa-solid fa-people-group"></i>Team</h5>
                         </div>
                         <div class="price-information">
                             <div>
-                                <h4>Professional</h4>
-                                <small>€ 12.00</small>
-                                <small>/mese</small>
+                                <h4>Advanced</h4>
+                                <small>€ 18.00</small>
+                                <small>/utente/mese</small>
                             </div>
                             <div>
                                 <ul>
-                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
+                                    <li><span><i class="fa-solid fa-people-group"></span></i> 1 utente</li>
                                     <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
                                     <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
                                 </ul>
@@ -137,11 +137,11 @@
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Nessun limite di spazio per i file</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di inserire nuovi membri del team</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Gestione dei permessi in base ai ruoli</li>
                                 </ul>
                             </div>
                         </div>  
@@ -149,37 +149,37 @@
                     <!-- 3box main -->
                     <div class="vertical-main-box">
                         <div  class="price">
-                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                            <h5><i class="fa-solid fa-hotel"></i></i>Azienda</h5>
                         </div>
                         <div class="price-information">
                             <div>
-                                <h4>Professional</h4>
-                                <small>€ 12.00</small>
-                                <small>/mese</small>
+                                <h4>Enterprise</h4>
+                                <small>Contattaci</small>
+                                <small>-</small>
                             </div>
                             <div>
                                 <ul>
-                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
-                                    <li><span><i class="fa-solid fa-folder"></span></i>  5 TB di spazio di archiviazione sicuro</li>
-                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    <li><span><i class="fa-solid fa-people-group"></span></i> 10 o piu' utenti</li>
+                                    <li><span><i class="fa-solid fa-folder"></span></i> Soluzioni personalizzabili per la tua azienda</li>
+                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
                                 </ul>
                             </div>  
                             <div>
-                                <button>Prova gratis per 30 giorni</button>
+                                <button>Contattaci</button>
                                 <p>oppure <a href="#">acquista ora</a></p>
                             </div>
                             <div>
                                 <h6>Punti Salienti del piano</h6>
                                 <ul>
-                                    <li><span><i class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><span><i class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Servizio assistenza 24h</li>
+                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di personalizzazione totale</li>
                                 </ul>
                             </div>
                         </div>  
-                    </div>  
-                </div>
+                    </div>
                 <!-- box orizzontale -->
-                <div class="orizzontal-main-box">
+                    <div class="orizzontal-main-box">
                     <div class="price">
                         <h5><i class="fa-solid fa-hotel"></i>Team</h5>
                     </div>
@@ -188,7 +188,7 @@
                             <h4>Enterprise</h4>
                             <h6>Contatta l'ufficio vendite per i prezzi</h6>
                             <div>
-                                <p>Soluzione personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                                <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                             </div>
                         </div>
                         <div class="small-orizzontal-main-box">
@@ -202,11 +202,11 @@
         <section class="second-session">
             <div class="small-container">
                 <div class="flex">
-                    <div class="box-img">
+                    <div class="box-70">
                         <img src="img/partner.png" alt="colleghi di lavoro">
                         
                     </div>
-                    <div class="box-text">
+                    <div class="box-30">
                         <h4>Entra in contatto con un partner Dropbox</h4>
                         <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
                         <div>
@@ -333,10 +333,10 @@
             <!-- PROVA GRATUITA -->
             <div class="free-trial ">
                 <div class="flex small-container">
-                    <div class="box-img">
+                    <div class="box-70">
                         <h2>Porta Dropbox Business nella tua azienda.</h2>
                     </div>
-                    <div class="box-text">
+                    <div class="box-30">
                         <div>
                             <button>Inia la tua prova gratuita</button>
                         </div>
@@ -436,6 +436,7 @@
                 </div>
             </div>
     </section>
+    <!-- BOTTOM FOOTER -->
     <section>
         <div class="big-container">
             <div class="bottom-footer">
