finito! ora aggiungo e miglioro la pagina

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                 <!-- contenitore pagina piccolo 1000px -->
                 <div class="flex main-structure">
                     <!-- 1box main /    MAIN FIRST SESSION-->
-                    <div class="vertical-main-box">
-                        <div  class="price">
+                    <div class="box-33">
+                        <div  class="offer">
                             <h5><i class="fa-solid fa-user"></i>Singolo</h5>
                         </div>
-                        <div class="price-information">
+                        <div class="offer-information">
                             <div>
                                 <h4>Professional</h4>
                                 <small>€ 12.00</small>
@@ -113,11 +113,11 @@
                         </div>  
                     </div>
                     <!-- 2box main -->
-                    <div class="vertical-main-box">
-                        <div  class="price">
+                    <div class="box-33">
+                        <div  class="offer">
                             <h5><i class="fa-solid fa-people-group"></i>Team</h5>
                         </div>
-                        <div class="price-information">
+                        <div class="offer-information">
                             <div>
                                 <h4>Advanced</h4>
                                 <small>€ 18.00</small>
@@ -147,11 +147,11 @@
                         </div>  
                     </div>
                     <!-- 3box main -->
-                    <div class="vertical-main-box">
-                        <div  class="price">
+                    <div class="box-33">
+                        <div  class="offer">
                             <h5><i class="fa-solid fa-hotel"></i></i>Azienda</h5>
                         </div>
-                        <div class="price-information">
+                        <div class="offer-information">
                             <div>
                                 <h4>Enterprise</h4>
                                 <small>Contattaci</small>
@@ -179,19 +179,19 @@
                         </div>  
                     </div>
                 <!-- box orizzontale -->
-                    <div class="orizzontal-main-box">
-                    <div class="price">
+                    <div class="orizzontal-box">
+                    <div class="offer">
                         <h5><i class="fa-solid fa-hotel"></i>Team</h5>
                     </div>
                     <div class="contacts flex">
-                        <div class="big-orizzontal-main-box">
+                        <div class="box-67">
                             <h4>Enterprise</h4>
                             <h6>Contatta l'ufficio vendite per i prezzi</h6>
                             <div>
                                 <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                             </div>
                         </div>
-                        <div class="small-orizzontal-main-box">
+                        <div class="orizzontal-33">
                             <button>Contatta l'ufficio vendite</button>
                         </div> 
                     </div>
@@ -222,7 +222,7 @@
                 <h2>Esegui piu' operazioni con Dropbox Business</h2>
                 <div class="flex">
                     <!-- box -->
-                    <div class="vertical-main-box">
+                    <div class="box-33">
                         <img src="img/business-feature-switching-tools.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <!-- box  -->
-                    <div class="vertical-main-box">
+                    <div class="box-33">
                         <img src="img/business-feature-send-files-it.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                     <!-- box -->
-                    <div class="vertical-main-box">
+                    <div class="box-33">
                         <img src="img/business-feature-coordinate-it.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                      <!-- box -->
-                     <div class="vertical-main-box">
+                     <div class="box-33">
                         <img src="img/business-feature-integrations-it.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                      <!-- box -->
-                     <div class="vertical-main-box">
+                     <div class="box-33">
                         <img src="img/business-feature-multi-device.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                      <!-- box -->
-                     <div class="vertical-main-box">
+                     <div class="box-33">
                         <img src="img/business-feature-security.png" alt="tools">
                         <div>
                             <h4>Passa di meno da uno strumento all'altro</h4>
