--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <!-- 1box main /    MAIN FIRST SESSION-->
                     <div class="box-33">
                         <div  class="offer">
-                            <h5><i class="fa-solid fa-user"></i>Singolo</h5>
+                            <h5><i class="fa-solid fa-user"></i> Singolo</h5>
                         </div>
                         <div class="offer-information">
                             <div>
@@ -115,7 +115,7 @@
                     <!-- 2box main -->
                     <div class="box-33">
                         <div  class="offer">
-                            <h5><i class="fa-solid fa-people-group"></i>Team</h5>
+                            <h5><i class="fa-solid fa-people-group"></i> Team</h5>
                         </div>
                         <div class="offer-information">
                             <div>
@@ -149,7 +149,7 @@
                     <!-- 3box main -->
                     <div class="box-33">
                         <div  class="offer">
-                            <h5><i class="fa-solid fa-hotel"></i></i>Azienda</h5>
+                            <h5><i class="fa-solid fa-hotel"></i></i> Azienda</h5>
                         </div>
                         <div class="offer-information">
                             <div>
@@ -181,7 +181,7 @@
                 <!-- box orizzontale -->
                     <div class="orizzontal-box">
                     <div class="offer">
-                        <h5><i class="fa-solid fa-hotel"></i>Team</h5>
+                        <h5><i class="fa-solid fa-hotel"></i> Team</h5>
                     </div>
                     <div class="contacts flex">
                         <div class="box-67">
@@ -286,17 +286,17 @@
             <div class="flex">
                 <!-- prima colonna -->
                 <div class="column-partner flex">
-                    <div class="box-partner">
-                        <img class="designit" src="img/designit.svg" alt="designit">
+                    <div class="box-partner designit">
+                        <img src="img/designit.svg" alt="designit">
                     </div>
-                    <div class="box-partner">
-                        <img class="arizona" src="img/arizona_state_university.svg" alt="arizona_state_university">
+                    <div class="box-partner arizona">
+                        <img src="img/arizona_state_university.svg" alt="arizona_state_university">
                     </div>
-                    <div class="box-partner ">
-                        <img class="florida fix-padding" src="img/university_of_florida.svg" alt="university_of_florida">
+                    <div class="box-partner florida fix-padding ">
+                        <img  src="img/university_of_florida.svg" alt="university_of_florida">
                     </div>
-                    <div class="box-partner">
-                        <img class="topps" src="img/topps.svg" alt="topps">    
+                    <div class="box-partner topps">
+                        <img  src="img/topps.svg" alt="topps">    
                     </div>   
                 </div>
                 <!--seconda colonna  -->
@@ -316,17 +316,17 @@
                 <!--terza colonna -->
                 <!-- ho usato come tag i nomi delle aziende per comodita' -->
                 <div class="column-partner flex">
-                    <div class="box-partner">
-                        <img class="world-bicycle" src="img/world_bicycle_relief.svg" alt="world_bicycle_relief">
+                    <div class="box-partner world-bicycle">
+                        <img  src="img/world_bicycle_relief.svg" alt="world_bicycle_relief">
                     </div>
-                    <div class="box-partner">
-                        <img class="hearst" src="img/hearst_corp.svg" alt="hearst">
+                    <div class="box-partner hearst">
+                        <img  src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="box-partner">
-                        <img class="lonely" src="img/lonely_planet.svg" alt="lonely_planet">
+                    <div class="box-partner lonely">
+                        <img  src="img/lonely_planet.svg" alt="lonely_planet">
                     </div>
-                    <div class="box-partner">
-                        <img class="clear-channel" src="img/clear_channel.svg" alt="clear_channel">    
+                    <div class="box-partner clear-channel">
+                        <img src="img/clear_channel.svg" alt="clear_channel">    
                     </div>   
                 </div>
             </div>
