--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <!-- aggiunto fixed nel banner -->
         <section class="banner flex center">
-            <div class="container-banner flex left-banner">
+            <div class="container-banner flex left-banner center">
                 <!-- inserimento lista link parte sinistra -->
                 <nav>
                     <ul>
@@ -34,7 +34,7 @@
                 </nav>
             </div>
             <!-- inserimento lista link parte destra -->
-            <div class="container-banner flex right-banner">
+            <div class="container-banner flex right-banner center">
                 <nav>
                     <ul>
                         <li  class="flex center" >
