--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
             <div class="small-container">
                 <h2>Trova il piano business che fa per te</h2>
                 <!-- check-box -->
-                <div class="check-box">
-                    <input type="radio">
-                    <label for="fatturazione mensile"> Fatturazione mensile</label>
-                    <input type="radio">
-                    <label for="fatturazione annuale"> Fatturazione annuale</label>
+                <div class="check-box flex">
+                    <div>
+                        <input type="radio" name="radio">
+                        <label for="fatturazione mensile"> Fatturazione mensile</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="radio">
+                        <label for="fatturazione annuale"> Fatturazione annuale</label>
+                    </div>
                 </div>
                 <!-- contenitore pagina piccolo 1000px -->
                 <div class="flex main-structure">
